syntax = "proto3";

package user;

service UserService {
    rpc UpdateUserImage (UpdateUserImageRequest) returns (UserResponse) {}
}

message User {
    string id = 1;
    string username = 2;
    string password = 3;
    string fullName = 4;
    bool isOnline = 5;
    string biography = 6;
    Gender gender = 7;
    string avatar = 8;
    string cover = 9;
    string work = 10;
    string school = 11;
    string hometown = 12;
    string living = 13;
    int32 followers = 14;
    int64  lastOnline = 15;
    int64  createdDate = 16;
    int64  updatedDate = 17;
}

enum Gender {
    MALE = 0;
    FEMALE = 1;
}

message Empty {};
  
message UserResponse {
    bool success = 1;
    string message = 2;
    User data = 3;
}

message UpdateUserImageRequest {
    string userId = 1;
    UpdateUserImageDto updateUserImageDto = 2;
}

message UpdateUserImageDto {
    string url = 1;
    string type = 2;
}